unpackaged/main/default/objects/API_Mapping__mdt/API_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Defines how the values in a request payload to the DataService API are mapped to SObjects and their fields.</description>
    <label>API Mapping</label>
    <pluralLabel>API Mappings</pluralLabel>
</CustomObject>