unpackaged/main/default/objects/API_Mapping__mdt/fields/Data_Servicer__c.field-meta.xml
<CustomField>
    <fullName>Data_Servicer__c</fullName>
    <label>Data Servicer</label>
    <referenceTo>Data_Servicer__mdt</referenceTo>
    <relationshipLabel>API Mappings</relationshipLabel>
    <relationshipName>API_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>